--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Title -->
-    <title>Lyrics</title>
+    <title>Landing Page</title>
     <!-- Plugin-CSS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="bootstrap-4.4.1-dist/css/bootstrap.min.css">
@@ -281,18 +281,18 @@
     <section class="copyright py-3 text-white ">
         <div class="container">
             <div class="row">
-                <div class="col-lg-2 col-md-12 col-sm-12">
+                <div class="col-lg-2 col-md-2 col-sm-12">
                     <div class="footer-logo">
                         <a href="#" class="text-white"><img src="images/bookmark-logo-white.svg"></a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-md-12 col-sm-12">
+                <div class="col-lg-7 col-md-7 col-sm-12">
                     <!-- Links -->
                     <a href="#" class="footer_last_part_menu px-3 text-white">Features</a>
                     <a href="#" class="footer_last_part_menu px-3 text-white">Pricing</a>
                     <a href="#" class="footer_last_part_menu px-3 text-white">Contact</a>
                 </div>
-                <div class="col-lg-3 col-md-12 col-sm-12">
+                <div class="col-lg-3 col-md-3 col-sm-12">
                     <div class="footer-links">
                         <a href="#" class="pr-3"><img src="images/icon-facebook.svg" width="15px"></a>
                         <a href="#"><img src="images/icon-twitter.svg" width="15px"></a>
